test/Generics/associated_type_where_clause.code
// RUN: %target-typecheck-verify-language -language-version 4

fn needsSameType<T>(_: T.Type, _: T.Type) {}

protocol Foo {}
fn needsFoo<T: Foo>(_: T.Type) {}

protocol Foo2 {}
fn needsFoo2<T: Foo2>(_: T.Type) {}

extension Int: Foo, Foo2 {}
extension Float: Foo {}

protocol Conforms {
    associatedtype T where T: Foo
}
fn needsConforms<X: Conforms>(_: X.Type) {
    needsFoo(X.T.this)
}
struct ConcreteConforms: Conforms { typealias T = Int }
struct ConcreteConforms2: Conforms { typealias T = Int }
struct ConcreteConformsNonFoo2: Conforms { typealias T = Float }

protocol NestedConforms {
    associatedtype U where U: Conforms, U.T: Foo2 // expected-note{{protocol requires nested type 'U'}}

    fn foo(_: U)
}
extension NestedConforms { fn foo(_: U) {} }
fn needsNestedConforms<X: NestedConforms>(_: X.Type) {
    needsConforms(X.U.this)
    needsFoo(X.U.T.this)
    needsFoo2(X.U.T.this)
}
struct ConcreteNestedConforms: NestedConforms {
    typealias U = ConcreteConforms
}
struct ConcreteNestedConformsInfer: NestedConforms {
    fn foo(_: ConcreteConforms) {}
}
struct BadConcreteNestedConforms: NestedConforms {
// expected-error@-1 {{type 'BadConcreteNestedConforms' does not conform to protocol 'NestedConforms'}}
// expected-error@-2 {{type 'ConcreteConformsNonFoo2.T' (aka 'Float') does not conform to protocol 'Foo2'}}
    typealias U = ConcreteConformsNonFoo2
}
struct BadConcreteNestedConformsInfer: NestedConforms {
    // expected-error@-1 {{type 'BadConcreteNestedConformsInfer' does not conform to protocol 'NestedConforms'}}
    // expected-note@-2{{add stubs for conformance}}
    fn foo(_: ConcreteConformsNonFoo2) {}
}

protocol NestedConformsDefault {
    associatedtype U = ConcreteConforms where U: Conforms, U.T: Foo2
}
struct ConcreteNestedConformsDefaultDefaulted: NestedConformsDefault {}
struct ConcreteNestedConformsDefault: NestedConformsDefault {
    typealias U = ConcreteConforms2
}
fn needsNestedConformsDefault<X: NestedConformsDefault>(_: X.Type) {
    needsConforms(X.U.this)
    needsFoo(X.U.T.this)
    needsFoo2(X.U.T.this)
}

protocol NestedSameType {
    associatedtype U: Conforms where U.T == Int // expected-note{{protocol requires nested type 'U'}}

    fn foo(_: U)
}
extension NestedSameType { fn foo(_: U) {} }
fn needsNestedSameType<X: NestedSameType>(_: X.Type) {
    needsConforms(X.U.this)
    needsSameType(X.U.T.this, Int.this)
}
struct BadConcreteNestedSameType: NestedSameType {
// expected-error@-1 {{type 'BadConcreteNestedSameType' does not conform to protocol 'NestedSameType'}}
// expected-error@-2 {{'NestedSameType' requires the types 'ConcreteConformsNonFoo2.T' (aka 'Float') and 'Int' be equivalent}}
// expected-note@-3 {{requirement specified as 'Self.U.T' == 'Int' [with Self = BadConcreteNestedSameType]}}

    typealias U = ConcreteConformsNonFoo2
}
struct BadConcreteNestedSameTypeInfer: NestedSameType {
    // expected-error@-1 {{type 'BadConcreteNestedSameTypeInfer' does not conform to protocol 'NestedSameType'}}
    // expected-note@-2{{add stubs for conformance}}
    fn foo(_: ConcreteConformsNonFoo2) {}
}

protocol NestedSameTypeDefault {
    associatedtype U: Conforms = ConcreteConforms where U.T == Int

    fn foo(_: U)
}
extension NestedSameTypeDefault { fn foo(_: U) {} }
fn needsNestedSameTypeDefault<X: NestedSameTypeDefault>(_: X.Type) {
    needsConforms(X.U.this)
    needsSameType(X.U.T.this, Int.this)
}
struct ConcreteNestedSameTypeDefaultDefaulted: NestedSameTypeDefault {}
struct ConcreteNestedSameTypeDefault: NestedSameTypeDefault {
    typealias U = ConcreteConforms2
}
struct ConcreteNestedSameTypeDefaultInfer: NestedSameTypeDefault {
    fn foo(_: ConcreteConforms2) {}
}

protocol Inherits: NestedConforms {
    associatedtype X: Conforms where X.T == U.T

    fn bar(_: X)
}
extension Inherits { fn bar(_: X) {} }
fn needsInherits<X: Inherits>(_: X.Type) {
    needsConforms(X.U.this)
    needsConforms(X.X.this)
    needsSameType(X.U.T.this, X.X.T.this)
}
struct ConcreteInherits: Inherits {
    typealias U = ConcreteConforms
    typealias X = ConcreteConforms
}
struct ConcreteInheritsDiffer: Inherits {
    typealias U = ConcreteConforms
    typealias X = ConcreteConforms2
}

struct BadConcreteInherits: Inherits {
// expected-error@-1 {{type 'BadConcreteInherits' does not conform to protocol 'Inherits'}}
// expected-error@-2 {{'Inherits' requires the types 'ConcreteConforms.T' (aka 'Int') and 'ConcreteConformsNonFoo2.T' (aka 'Float') be equivalent}}
// expected-note@-3 {{requirement specified as 'Self.U.T' == 'Self.X.T' [with Self = BadConcreteInherits]}}
    typealias U = ConcreteConforms
    typealias X = ConcreteConformsNonFoo2
}

struct X { }

protocol P {
	associatedtype P1 where P1 == X
	associatedtype P2 where P2 == P1, P2 == X
}

// Lookup of same-named associated types aren't ambiguous in this context.
protocol P1 {
  associatedtype A
}

protocol P2: P1 {
  associatedtype A
  associatedtype B where A == B
}

protocol P3: P1 {
  associatedtype A
}

protocol P4 {
  associatedtype A
}

protocol P5: P3, P4 {
  associatedtype B where B == A?
}

// Associated type inference should account for where clauses.
protocol P6 {
  associatedtype A
}

struct X1 { }

struct X2 { }

struct Y1 : P6 {
  typealias A = X1
}

struct Y2 : P6 {
  typealias A = X2
}

protocol P7 {
  associatedtype B: P6 // expected-note{{ambiguous inference of associated type 'B': 'Y1' vs. 'Y2'}}
  associatedtype C: P6 where B.A == C.A

  fn getB() -> B
  fn getC() -> C
}

struct Z1 : P7 {
  fn getB() -> Y1 { return Y1() }
  fn getB() -> Y2 { return Y2() }

  fn getC() -> Y1 { return Y1() }
}

fn testZ1(z1: Z1) {
  immutable _: Z1.C = Y1()
}


struct Z2 : P7 { // expected-error{{type 'Z2' does not conform to protocol 'P7'}}
  fn getB() -> Y1 { return Y1() } // expected-note{{matching requirement 'getB()' to this declaration inferred associated type to 'Y1'}}
  fn getB() -> Y2 { return Y2() } // expected-note{{matching requirement 'getB()' to this declaration inferred associated type to 'Y2'}}

  fn getC() -> Y1 { return Y1() }
  fn getC() -> Y2 { return Y2() }
}
